@@ -34,27 +34,27 @@ Bug-Debian: https://bugs.debian.org/960735
 +            #include <asm/page.h>
 +            #include <asm/pgtable.h>
              #if defined(NV_ASM_SET_MEMORY_H_PRESENT)
-             #include <asm/set_memory.h>
-             #else
-@@ -422,6 +424,8 @@ compile_test() {
+             #if defined(NV_ASM_PGTABLE_TYPES_H_PRESENT)
+             #include <asm/pgtable_types.h>
+@@ -425,6 +427,8 @@ compile_test() {
              # Determine if the set_memory_array_uc() function is present.
              #
              CODE="
 +            #include <asm/page.h>
 +            #include <asm/pgtable.h>
              #if defined(NV_ASM_SET_MEMORY_H_PRESENT)
-             #include <asm/set_memory.h>
-             #else
-@@ -474,6 +478,8 @@ compile_test() {
+             #if defined(NV_ASM_PGTABLE_TYPES_H_PRESENT)
+             #include <asm/pgtable_types.h>
+@@ -480,6 +484,8 @@ compile_test() {
              # Determine if the set_pages_uc() function is present.
              #
              CODE="
 +            #include <asm/page.h>
 +            #include <asm/pgtable.h>
              #if defined(NV_ASM_SET_MEMORY_H_PRESENT)
-             #include <asm/set_memory.h>
-             #else
-@@ -1836,7 +1842,7 @@ compile_test() {
+             #if defined(NV_ASM_PGTABLE_TYPES_H_PRESENT)
+             #include <asm/pgtable_types.h>
+@@ -1858,7 +1864,7 @@ compile_test() {
              # Determine if atomic_long_t and associated functions are defined
              # Added in 2.6.16 2006-01-06 d3cb487149bd706aa6aeb02042332a450978dc1c
              CODE="
@@ -63,7 +63,7 @@ Bug-Debian: https://bugs.debian.org/960735
              void conftest_atomic_long(void) {
                  atomic_long_t data;
                  atomic_long_read(&data);
-@@ -1850,7 +1856,7 @@ compile_test() {
+@@ -1872,7 +1878,7 @@ compile_test() {
          atomic64_type)
              # Determine if atomic64_t and associated functions are defined
              CODE="
@@ -72,7 +72,7 @@ Bug-Debian: https://bugs.debian.org/960735
              void conftest_atomic64(void) {
                  atomic64_t data;
                  atomic64_read(&data);
-@@ -3484,7 +3490,7 @@ compile_test() {
+@@ -3508,7 +3514,7 @@ compile_test() {
              #     2008-01-25  9ee85241fdaab358dff1d8647f20a478cfa512a1
              #
              CODE="
