@@ -9,7 +9,7 @@ Description: Add -Wa,-mimplicit-it=thumb to CFLAGS if building on ARM
 
 --- a/conftest.sh
 +++ b/conftest.sh
-@@ -185,7 +185,7 @@ build_cflags() {
+@@ -193,7 +193,7 @@ build_cflags() {
      done
  
      if [ "$ARCH" = "arm" ]; then
